syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "protobuf/gogoproto/gogo.proto";

package storage;

message ImageComponent {
    message License {
        string name = 1;
        string type = 2;
        string url  = 3;
    }

    string                         id           = 1 [(gogoproto.moretags) = "search:\"Component ID,store\""];
    string                         name         = 2 [(gogoproto.moretags) = "search:\"Component Name,store\""];
    string                         version      = 3 [(gogoproto.moretags) = "search:\"Component Version,store\""];
    License                        license      = 4;
    int64                          priority     = 5;

    ComponentRelationship          relationship = 6;
}

message ComponentRelationship {
    // Component id
    string                              id       = 1;
    //Images that contain this component
    repeated ComponentImageRelationship image_id = 2;
}

message ComponentImageRelationship {
    // Image id
    string          id       = 1;
    // Layer that contains this component
    oneof has_layer_index {
        int32 layer_index    = 2;
    }
}
